# QtGenTools

./: .cproject  .gitignore  .project  CMakeLists.txt  FileUtils.h  LICENSE.txt  QtTool.cpp  QtTool.h  README.txt  StringUtils.h  Version.h  VersionInfo.rc  main.cpp
proj/QtGenTools.xcodeproj/: project.pbxproj
proj/cb/: QtGenTools.cbp
proj/msvc/: QtGenTools.sln  QtGenTools.vcxproj  QtGenTools.vcxproj.filters
